# tagit

./: .gitignore  README.md  demo.html  demo.ipynb  demo.py  pyproject.toml
.github/workflows/: ci.yml
tagit/: __init__.py  elements.py  gen_elements.py  main.py
tests/: test_main.py
